--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -6,5 +6,8 @@
     "access": "ANYONE_ANONYMOUS"
   },
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "oauthScopes": [
+    "https://www.googleapis.com/auth/cloud-platform"
+  ]
 }
